--- a/src/makefile
+++ b/src/makefile
@@ -1,16 +1,16 @@
-IDIR =../include
+IDIR =../inc
 CC=gcc
 CFLAGS=-I$(IDIR)
 
 ODIR =../obj
-LDIR =../gmp-6.1.2/include
+LDIR =../gmp-6.1.2/inc
 
 LIBS=-lm -lgmp
 
-_DEPS = roots.h utils.h RWG2.h RWG2S.h RWG7.h RWG7S.h
+_DEPS = roots.h utils.h RWG2.h RWG2S.h RWG7.h RWG7S.h ptestio.h
 DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
 
-_OBJ = main.o roots.o utils.o RWG2.o RWG2S.o RWG7.o RWG7S.o
+_OBJ = main.o roots.o utils.o RWG2.o RWG2S.o RWG7.o RWG7S.o ptestio.o
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
 
