--- a/src/makefile
+++ b/src/makefile
@@ -1,23 +1,23 @@
 IDIR =../inc
 CC=gcc
-CFLAGS=-I$(IDIR)# -pg#uncomment -pg to enable profiling
+CFLAGS=-I$(IDIR) -L../lib/libsrc# -pg#uncomment -pg to enable profiling
 
 ODIR =../obj
 LDIR =../gmp-6.1.2/inc
 
-LIBS=-lm -lgmp
+LIBS=-lm -lgmp -lRWGPrimality
 
-_DEPS = roots.h utils.h RWG2.h RWG2S.h RWG7.h RWG7S.h ptest.h primalityRWG.h
+_DEPS = ptest.h primalityRWG.h
 DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
 
-_OBJ = main.o roots.o utils.o RWG2.o RWG2S.o RWG7.o RWG7S.o ptest.o
+_OBJ = ptest.o
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
 
 $(ODIR)/%.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-main: $(OBJ)
+ptest: $(OBJ)
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
 
 .PHONY: clean
