--- a/src/makefile
+++ b/src/makefile
@@ -17,7 +17,7 @@ OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 $(ODIR)/%.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-ptest: $(OBJ)
+ptest: $(OBJ) ../lib/libsrc/libRWGPrimality.a
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
 
 .PHONY: clean
